<resources>
    <string name="app_name">Foot Set Move</string>
    <string name="profile">Profile</string>
    <string name="coins">Coins</string>
    <string name="cash">Cash</string>
    <string name="offers">Offers</string>
    <string name="step_history">Step History</string>
    <string name="settings">Settings</string>
    <string name="report_issue">Report Issue</string>
    <string name="good_morning">Good Morning</string>
    <string name="home">Home</string>
    <string name="earn_more">Earn More</string>
    <string name="friends">Friends</string>
    <string name="signInName">Already Have An Account? <u>Sign In</u></string>
    <string name="signUpName">New User? <b><u>Sign Up</u></b></string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_id">Verify Id</string>
    <string name="please_enter_your_email_or_mobile">Please Enter Your Email Or Mobile</string>
    <string name="email_or_mobile">Email Or Mobile</string>
    <string name="user_name">username</string>
    <string name="code">Code</string>
    <string name="create_a_password">Create a Password</string>
    <string name="verify">Verify</string>
    <string name="mobile">Mobile</string>
    <string name="jaskaran">js</string>
    <string name="PaSsword">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username3">username</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="continue_with_phone">Continue With Phone</string>
    <string name="or">OR</string>
    <string name="please_enter_your_mobile_number_n_to_verify">Please enter your Mobile Number To Verify</string>
    <string name="password_329">Password</string>
    <string name="please_enter_your_password454">Please Enter Your Password</string>
    <string name="check55">Check</string>
    <string name="continue_with_google121">Continue With Google</string>
    <string name="create_an_account_with_email">Create An Account with Email</string>
</resources>