<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.login.PasswordForSignInPhone">

    <View
        android:id="@+id/view3ww2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/MainTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wert32894"
        android:layout_width="193dp"
        android:layout_height="42dp"
        android:layout_marginTop="52dp"
        android:gravity="center_horizontal"
        android:text="@string/password_329"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viqew23343"
        android:layout_width="412dp"
        android:layout_height="85dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/ic_wave__2_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordBtn35523"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/please_enter_your_password454"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viqew23343" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordED_for_phoneSignIn32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordBtn35523"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/for_input_edittext"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="300dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signInBtn2231"
        android:layout_width="204dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="172dp"
        android:background="@drawable/roundness"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:elevation="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:paddingEnd="10dp"
        android:text="@string/check55"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>