<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.akshat.sahijpal.healthtracer.ui.fragments.login.EmailAuthFragment"
    >
    <View
        android:id="@+id/view32"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/MainTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView321"
        android:layout_width="203dp"
        android:layout_height="62dp"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:text="@string/create_an_account_with_email"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view233"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/ic_wave__2_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_id_ed_133"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view233"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/for_input_edittext"
            android:drawableStart="@drawable/ic_baseline_mail_24_ddd"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="300dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_for_email333"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_id_ed_133"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/for_input_edittext"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/create_a_password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="300dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/verifyBtnEmail212"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:elevation="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/roundness"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:gravity="center_horizontal|center_vertical"
        android:paddingEnd="10dp"
        android:text="@string/verify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>