<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.login.ForgotPassword">
    <View
        android:id="@+id/view32"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#00cba9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4321"
        android:layout_width="197dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:text="Confirm Your Identity"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view233"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/wave_62"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordBtn323"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/please_enter_your_email_or_mobile"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view233" />

    <EditText
        android:id="@+id/mailForVerificationOrMobile"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/for_input_edittext"
        android:drawableStart="@drawable/ic_baseline_mail_24_ddd"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email_or_mobile"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordBtn323"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/signInBtn221"
        android:layout_width="204dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/roundness"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:elevation="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:paddingEnd="10dp"
        android:text="@string/verify_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/forgotPordBtn32333"
        android:layout_width="341dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="Email Sent\nPlease Check Your Inbox!!"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn221" />

</androidx.constraintlayout.widget.ConstraintLayout>